# gstreamer_tutorials

./: CMakeLists.txt  README.md  basic_1.c  basic_2.c  osx_app.h  osx_app.mm
